--- a/app/views/payment_plan_mailer/_send_alert_exchange_card_mail.html.slim
+++ b/app/views/payment_plan_mailer/_send_alert_exchange_card_mail.html.slim
@@ -7,7 +7,7 @@
           p.container__intro Prezado(a) <strong>#{@partner.name},</strong>
           br
           br
-          p.container__text Esperamos que este e-mail o(a) encontre bem. Gostaríamos de informar sobre uma recente atualização em relação ao método de pagamento associado à sua assinatura no SacGpt.
+          p.container__text Esperamos que este e-mail o(a) encontre bem. Gostaríamos de informar sobre uma recente atualização em relação ao método de pagamento associado à sua assinatura no SacGPT.
 
           p.container__text <strong>Detalhes da Troca de Cartão de Crédito:</strong>
           br
@@ -22,10 +22,10 @@
 
           p.container__text Se você tiver alguma pergunta ou precisar de assistência, nossa equipe de suporte está à disposição. Entre em contato através do e-mail <strong>equipe.sacgpt@sacgpt.com.br</strong>.
 
-          p.container__text Agradecemos novamente por escolher o SacGpt. Estamos aqui para garantir uma experiência contínua e eficaz no atendimento virtual da sua empresa.
+          p.container__text Agradecemos novamente por escolher o SacGPT. Estamos aqui para garantir uma experiência contínua e eficaz no atendimento virtual da sua empresa.
           br
           br
           p.container__text Atenciosamente,
-          p.container__text Equipe SacGpt
+          p.container__text Equipe SacGPT
 
       = render 'email/footer'
