--- a/app/views/partner_mailer/_send_password_recovery_mail.html.slim
+++ b/app/views/partner_mailer/_send_password_recovery_mail.html.slim
@@ -7,7 +7,7 @@
           p.container__intro Saudações, <strong>#{@partner.name}</strong>
           br
           br
-          p.container__text Recebemos uma solicitação de recuperação de conta para o seu perfil no SacGpt. Sabemos o quanto é importante para você manter o acesso à nossa plataforma, e estamos aqui para ajudar.
+          p.container__text Recebemos uma solicitação de recuperação de conta para o seu perfil no SacGPT. Sabemos o quanto é importante para você manter o acesso à nossa plataforma, e estamos aqui para ajudar.
 
           p.container__text <strong>Se você não solicitou essa recuperação, por favor, ignore este e-mail.</strong> Caso contrário, siga as instruções abaixo para redefinir a sua senha e recuperar o acesso à sua conta:
           br
@@ -19,15 +19,15 @@
 
           p.container__text Lembramos que, por motivos de segurança, o link de redefinição de senha é válido por um tempo determinado. Se você não redefinir sua senha dentro desse período, será necessário solicitar uma nova recuperação de conta.
           br
-          p.container__text Após redefinir sua senha, você poderá acessar novamente sua conta SacGpt e continuar a desfrutar dos nossos recursos de atendimento virtual.
+          p.container__text Após redefinir sua senha, você poderá acessar novamente sua conta SacGPT e continuar a desfrutar dos nossos recursos de atendimento virtual.
           br
           p.container__text Se você precisar de qualquer assistência adicional ou tiver dúvidas, não hesite em entrar em contato com nossa equipe de suporte através do e-mail <strong>equipe.sacgpt@sacgpt.com.br</strong>.
           br
-          p.container__text Estamos aqui para ajudar a garantir que você possa aproveitar ao máximo a sua experiência com o SacGpt.
+          p.container__text Estamos aqui para ajudar a garantir que você possa aproveitar ao máximo a sua experiência com o SacGPT.
           br
           br
           p.container__text Atenciosamente,
-          p.container__text Equipe SacGpt
+          p.container__text Equipe SacGPT
 
       = render 'email/footer'
 
