--- a/app/views/payment_plan_mailer/_send_cancellation_plan_mail.html.slim
+++ b/app/views/payment_plan_mailer/_send_cancellation_plan_mail.html.slim
@@ -7,21 +7,21 @@
           p.container__intro Saudações, <strong>#{@subscription.partner.name}.</strong>
           br
           br
-          p.container__text Recebemos a sua solicitação de cancelamento do plano  #{@subscription.payment_plan.name} no SacGpt. Lamentamos ver você partir e gostaríamos de agradecer por ter sido parte da nossa comunidade.
+          p.container__text Recebemos a sua solicitação de cancelamento do plano  #{@subscription.payment_plan.name} no SacGPT. Lamentamos ver você partir e gostaríamos de agradecer por ter sido parte da nossa comunidade.
           
           p.container__text Detalhes do Cancelamento:
           br
           p.container__text - Plano: #{@subscription.payment_plan.name}        
           p.container__text - Data de Cancelamento: #{@subscription.updated_at.strftime("%d/%m/%Y")}
           br
-          p.container__text Entendemos que as necessidades podem mudar, e respeitamos a sua decisão. Se houver algum feedback que você gostaria de compartilhar sobre a sua experiência com o SacGpt, ficaríamos felizes em ouvir.
+          p.container__text Entendemos que as necessidades podem mudar, e respeitamos a sua decisão. Se houver algum feedback que você gostaria de compartilhar sobre a sua experiência com o SacGPT, ficaríamos felizes em ouvir.
           p.container__text Por favor, esteja ciente de que, após o cancelamento, você não terá mais acesso aos recursos e benefícios do plano a partir de #{@subscription.updated_at.strftime("%d/%m/%Y")}. Caso mude de ideia ou deseje retomar a assinatura, você sempre será bem-vindo(a) de volta.
           br
           p.container__text Se você tiver alguma pergunta ou precisar de assistência, nossa equipe de suporte está à disposição. Entre em contato através do e-mail <strong>equipe.sacgpt@sacgpt.com.br</strong>.
-          p.container__text Mais uma vez, agradecemos por ter escolhido o SacGpt para aprimorar o atendimento da sua empresa. Desejamos sucesso contínuo em seus empreendimentos futuros.
+          p.container__text Mais uma vez, agradecemos por ter escolhido o SacGPT para aprimorar o atendimento da sua empresa. Desejamos sucesso contínuo em seus empreendimentos futuros.
           br
           br
           p.container__text Atenciosamente,
-          p.container__text Equipe SacGpt.
+          p.container__text Equipe SacGPT.
 
       = render 'email/footer'
