feat: add new implementations for release

--- a/app/views/partner_mailer/_send_almost_exceed_tokens_quota.slim
+++ b/app/views/partner_mailer/_send_almost_exceed_tokens_quota.slim
@@ -4,11 +4,17 @@
       = render 'email/header'
       tr
         td.email__main-content
-          p.container__intro Saudações, <strong>#{@partner.name}</strong>
+          p.container__intro Prezado, <strong>#{@partner.name}</strong>
+          br
+          p.container__text Esperamos que esteja bem.
           br
           br
-          p.container__text Atigiu 90% da sua cota de tokens
-
+          p.container__text É com urgência que informamos que o plano contratado do SacGpt atingiu 90% da cota de tokens extras. Infelizmente, isso significa que o saldo de tokens para uso está quase esgotado.
+          br
+          p.container__text Para garantir que você não tenha interrupções no serviço, recomendamos que considere um upgrade de plano ou adquira mais tokens o mais rápido possível. Entre em contato conosco imediatamente para discutir suas opções e evitar quaisquer inconvenientes.
+          br
+          p.container__text Estamos aqui para ajudar e garantir uma transição suave. Agradecemos sua compreensão e colaboração.
+          br
           br
           p.container__text Atenciosamente,
           p.container__text Equipe SacGPT
