--- a/app/views/partner_mailer/_send_exceed_extra_tokens_quota.slim
+++ b/app/views/partner_mailer/_send_exceed_extra_tokens_quota.slim
@@ -4,11 +4,19 @@
       = render 'email/header'
       tr
         td.email__main-content
-          p.container__intro Saudações, <strong>#{@partner.name}</strong>
+          p.container__intro Prezado, <strong>#{@partner.name}</strong>
+          br
+          p.container__text Esperamos que esteja bem.
           br
           br
-          p.container__text Ultrapassou a cota extra de tokens.
-
+          p.container__text Gostaríamos de informar que sua conta no SacGPT ultrapassou a cota extra de tokens disponíveis para uso. Isso significa que você atingiu o limite máximo de utilização de tokens adicionais.
+          br
+          p.container__text É importante ressaltar que ultrapassar esse limite pode resultar na suspensão temporária do serviço ou na cobrança de tarifas adicionais, de acordo com nossa política de uso.
+          br
+          p.container__text Para evitar interrupções no serviço e garantir uma experiência contínua, recomendamos que você revise seu uso atual de tokens e considere atualizar seu plano para um que atenda melhor às suas necessidades de uso.
+          br
+          p.container__text Ficamos à disposição para ajudar e esclarecer quaisquer dúvidas que possam surgir.
+          br
           br
           p.container__text Atenciosamente,
           p.container__text Equipe SacGPT
