--- a/app/views/partner_mailer/_send_half_tokens_quota.slim
+++ b/app/views/partner_mailer/_send_half_tokens_quota.slim
@@ -4,11 +4,17 @@
       = render 'email/header'
       tr
         td.email__main-content
-          p.container__intro Saudações, <strong>#{@partner.name}</strong>
+          p.container__intro Prezado, <strong>#{@partner.name}</strong>
+          br
+          p.container__text Esperamos que esteja bem.
           br
           br
-          p.container__text Atigiu 50% da sua cota de tokens.
-
+          p.container__text Gostaríamos de informar que o plano contratado do SacGpt atingiu 50% da cota de utilização.
+          br
+          p.container__text É importante estar ciente desse marco para garantir que você tenha uma experiência contínua e ininterrupta com nossa plataforma. Caso deseje ajustar seu plano ou obter mais informações sobre o upgrade, não hesite em entrar em contato conosco.
+          br
+          p.container__text Agradecemos por confiar no SacGpt para suas necessidades de atendimento ao cliente. Estamos sempre disponíveis para ajudar.
+          br
           br
           p.container__text Atenciosamente,
           p.container__text Equipe SacGPT
