--- a/app/views/partner_mailer/_send_half_extra_tokens_quota.slim
+++ b/app/views/partner_mailer/_send_half_extra_tokens_quota.slim
@@ -4,11 +4,17 @@
       = render 'email/header'
       tr
         td.email__main-content
-          p.container__intro Saudações, <strong>#{@partner.name}</strong>
+          p.container__intro Prezado, <strong>#{@partner.name}</strong>
+          br
+          p.container__text Esperamos que esteja bem.
           br
           br
-          p.container__text Atigiu 50% da sua cota extra de tokens.
-
+          p.container__text Gostaríamos de informar que você atingiu 50% da sua cota extra de tokens no SacGPT. Isso significa que metade dos tokens adicionais disponíveis para uso já foram utilizados.
+          br
+          p.container__text Para evitar interrupções no serviço e garantir que você tenha tokens suficientes para suas atividades, recomendamos que você monitore seu uso de tokens e ajuste sua estratégia, se necessário.
+          br
+          p.container__text Lembre-se de que estamos aqui para ajudar e oferecer suporte em caso de dúvidas ou necessidades adicionais.
+          br
           br
           p.container__text Atenciosamente,
           p.container__text Equipe SacGPT
