feat: implemented connection test rake

--- a/app/views/partner_mailer/_send_new_lead_received_mail.html.slim
+++ b/app/views/partner_mailer/_send_new_lead_received_mail.html.slim
@@ -19,6 +19,9 @@
           p.container__text - Data e Hora: #{@lead.created_at.strftime("%m/%d/%Y %I:%M %p")}
           br
           br
+          a href="#{ENV['WEB_PAGE']}chat/#{@client.id}" Perfil do Cliente.
+          br
+          br
           p.container__text Agradecemos por confiar no SacGPT para ajudar a capturar e gerenciar leads de forma eficaz. A sua plataforma de atendimento virtual está contribuindo para conectar a sua empresa com potenciais clientes de maneira mais rápida e conveniente.
           p.container__text Para visualizar mais detalhes ou tomar medidas em relação a este lead, acesse a sua conta SacGPT e vá para a seção de gerenciamento de leads.
           p.container__text Se você tiver alguma pergunta ou precisar de assistência, nossa equipe de suporte está à disposição. Entre em contato através do e-mail <strong>equipe.sacgpt@sacgpt.com.br</strong>.
